<resources>
    <string name="app_name">DesafioWebServices</string>
    <string name="splash_screen_image">Splash Screen Image</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome_to_the_marvel_hq_s">Welcome to the Marvel HQ\'s</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="remember">Remember</string>
    <string name="login">LOG IN</string>
    <string name="create_account">Create account</string>
    <string name="register">Register</string>
    <string name="name">Name</string>
    <string name="save">save</string>
    <string name="campo_vazio">Campo Vazio</string>
    <string name="text_layoutItemComic">#HQ</string>
    <string name="imagem">imagem</string>
    <string name="_90">#90</string>
    <string name="published_fragmentComicInfo">Published:</string>
    <string name="data_fragmentComicInfo">April 30, 2014</string>
    <string name="price_fragmentComicInfo">Price: $</string>
    <string name="money_fragmentComicInfo">$ 5,99</string>
    <string name="pages_fragmentComicInfo">Pages:</string>
    <string name="numberPages_fragmentComicInfo">38</string>
    <string name="thumbnail_fragmentComicInfo">Thumbnail</string>
    <string name="image_background_fragmentComicInfo">Image Background</string>
    <string name="imgBotao_fragmentComicInfo">Botão de voltar</string>
    <string name="imgBotao_fragmentComicCover">Botão de fechar</string>
    <string name="imagem_da_capa_fragmentComicCover">Imagem da Capa</string>
    <string name="imagem_da_capa_fragmentComicListItem">Imagem da capa</string>
    <string name="imagem_botaoVoltar_fragmentRegister">Imagem Botão de Voltar</string>
    <string name="imagem_do_usuario_fragmentRegister">Imagem do Usuario</string>
    <string name="capa_do_quadrinho_fragmentItemComic">Capa do quadrinho</string>
    <string name="main_activity">Main Activity</string>
</resources>