<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackgroundPrimary"
    tools:context=".view.login.LoginFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout_fragmentLogin"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="25dp"
        android:layout_marginTop="110dp"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="110dp"
        android:background="@drawable/shape_login"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtWelcome_fragmentLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="30dp"
        android:gravity="center"
        android:text="@string/welcome_to_the_marvel_hq_s"
        android:textColor="@color/colorWhite"
        android:textSize="21sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/constraintLayout_fragmentLogin"
        app:layout_constraintStart_toStartOf="@+id/constraintLayout_fragmentLogin"
        app:layout_constraintTop_toTopOf="@+id/constraintLayout_fragmentLogin" />

    <androidx.cardview.widget.CardView
        android:layout_width="311dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:background="@color/colorWhite"
        app:cardCornerRadius="25dp"
        app:layout_constraintBottom_toBottomOf="@+id/constraintLayout_fragmentLogin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtWelcome_fragmentLogin">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/txtEmail_fragmentLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="40dp"
                android:layout_marginRight="10dp"
                android:background="@color/colorWhite"
                android:hint="@string/email"
                app:hintTextColor="@color/colorHint">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txtInputEmail_fragmentLogin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/txtPassword_fragmentLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="@color/colorWhite"
                android:hint="@string/password"
                app:hintTextColor="@color/colorHint">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txtInputPassword_fragmentLogin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword" />

            </com.google.android.material.textfield.TextInputLayout>

            <CheckBox
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="10dp"
                android:checked="true"
                android:text="@string/remember"
                android:textColor="@color/colorRedText" />

            <Button
                android:id="@+id/btnLogin_fragmentLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="40dp"
                android:layout_marginRight="10dp"
                android:background="@color/colorBackgroundSecondary"
                android:fontFamily="sans-serif"
                android:text="@string/login"
                android:textColor="@color/colorWhite"
                android:textSize="15sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btnCreate_fragmentLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="@color/colorWhite"
                android:fontFamily="sans-serif-light"
                android:text="@string/create_account"
                android:textAllCaps="false"
                android:textSize="15sp" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>