<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackgroundPrimary"
    tools:context=".view.register.RegisterFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBar_fragmentRegister"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorBackgroundSecondary"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar_fragmentRegister"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.constraintlayout.widget.ConstraintLayout

                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/imgBack"
                    android:layout_width="30dp"
                    android:layout_height="55dp"
                    android:layout_marginStart="10dp"
                    android:src="@drawable/ic_baseline_arrow_back_24"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/txtRegister_registerFragment"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:text="@string/register"
                    android:textColor="@color/colorWhite"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@id/imgBack"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout_fragmentRegister"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="25dp"
        android:layout_marginTop="150dp"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="110dp"
        android:background="@drawable/shape_login"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/txtFake_fragmentRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="30dp"
            android:gravity="center"
            android:textSize="25sp"
            app:layout_constraintEnd_toEndOf="@+id/constraintLayout_fragmentLogin"
            app:layout_constraintStart_toStartOf="@+id/constraintLayout_fragmentLogin"
            app:layout_constraintTop_toTopOf="@+id/constraintLayout_fragmentLogin" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView_fragmentLogin"
            android:layout_width="311dp"
            android:layout_height="match_parent"
            android:layout_marginTop="60dp"
            android:background="@color/colorWhite"
            app:cardCornerRadius="25dp"
            app:layout_constraintBottom_toBottomOf="@+id/constraintLayout_fragmentLogin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txtFake_fragmentRegister">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="20dp"
                android:orientation="vertical">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/txtName_fragmentRegister"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:background="@color/colorWhite"
                    android:hint="@string/name"
                    app:hintTextColor="@color/colorHint">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/txtInputName_fragmentRegister"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/txtEmail_fragmentRegister"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:background="@color/colorWhite"
                    android:hint="@string/email"
                    app:hintTextColor="@color/colorHint">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/txtInputEmail_fragmentRegister"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textEmailAddress" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/txtPassword_fragmentRegister"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:background="@color/colorWhite"
                    android:hint="@string/password"
                    app:hintTextColor="@color/colorHint">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/txtInputPassword_fragmentRegister"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword" />

                </com.google.android.material.textfield.TextInputLayout>

                <Button
                    android:id="@+id/btnSave_fragmentRegister"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="40dp"
                    android:layout_marginRight="10dp"
                    android:background="@color/colorBackgroundSecondary"
                    android:fontFamily="sans-serif"
                    android:text="@string/save"
                    android:textColor="@color/colorWhite"
                    android:textSize="15sp"
                    android:textStyle="bold" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <View
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="45dp"
        android:background="@drawable/shape_user"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appBar_fragmentRegister" />

    <ImageView
        android:id="@+id/imgUser_fragmentRegister"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginTop="45dp"
        android:scaleType="fitXY"
        android:src="@drawable/ic_baseline_group_add_24"
        app:layout_constraintBottom_toTopOf="@+id/constraintLayout_fragmentRegister"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/appBar_fragmentRegister" />

</androidx.constraintlayout.widget.ConstraintLayout>